@@ -210,6 +210,7 @@ changes to languages because of Phabricator reports.
   'Project:Oversight' to 'Project:Suppress'.
 * (T84937) Free external links ("autolinked" urls) will now be terminated
   by &nbsp; and HTML entity encodings of &nbsp, <, and >.
+* Added $user parameter to EmailUser and EmailUserCC hooks.
 
 == Compatibility ==
 
